--- a/src/components/Chatbot.astro
+++ b/src/components/Chatbot.astro
@@ -2,75 +2,75 @@
 // src/components/Chatbot.astro
 ---
 
-<script type="module">
-    function initializeChatbot() {
-      import("https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js").then(({ default: Chatbot }) => {
-        Chatbot.init({
-          chatflowid: "2aa95558-1764-401e-9993-10a380e6599b",
-          apiHost: "http://localhost:3000",
-          chatflowConfig: {
-            // topK: 2
+<script is:inline type="module">
+  function initializeChatbot() {
+    import("https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js").then(({ default: Chatbot }) => {
+      Chatbot.init({
+        chatflowid: "2aa95558-1764-401e-9993-10a380e6599b",
+        apiHost: "http://localhost:3000",
+        chatflowConfig: {
+          // topK: 2
+        },
+        theme: {
+          button: {
+            backgroundColor: "rgba(255, 255, 255, 0.3)",
+            right: 20,
+            bottom: 20,
+            size: "medium",
+            iconColor: "white",
+            customIconSrc: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg",
+            style: {
+              backdropFilter: "blur(30px)",
+              boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
+            }
           },
-          theme: {
-            button: {
-              backgroundColor: "rgba(255, 255, 255, 0.3)",
-              right: 20,
-              bottom: 20,
-              size: "medium",
-              iconColor: "white",
-              customIconSrc: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg",
+          chatWindow: {
+            welcomeMessage: "Hello! This is custom welcome message",
+            backgroundColor: "rgba(0, 0, 0, 0.7)",
+            style: {
+              backdropFilter: "blur(30px)",
+              border: "1px solid rgba(255, 255, 255, 0.18)"
+            },
+            height: 700,
+            width: 400,
+            fontSize: 16,
+            poweredByTextColor: "#FFFFFF",
+            botMessage: {
+              backgroundColor: "rgba(255, 255, 255, 0.2)",
+              textColor: "#FFFFFF",
+              showAvatar: true,
+              avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
               style: {
                 backdropFilter: "blur(30px)",
                 boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
               }
             },
-            chatWindow: {
-              welcomeMessage: "Hello! This is custom welcome message",
-              backgroundColor: "rgba(0, 0, 0, 0.7)",
+            userMessage: {
+              backgroundColor: "rgba(0, 0, 0, 0.5)",
+              textColor: "#FFFFFF",
+              showAvatar: true,
+              avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png",
               style: {
                 backdropFilter: "blur(30px)",
-                border: "1px solid rgba(255, 255, 255, 0.18)"
-              },
-              height: 700,
-              width: 400,
-              fontSize: 16,
-              poweredByTextColor: "#FFFFFF",
-              botMessage: {
-                backgroundColor: "rgba(255, 255, 255, 0.2)",
-                textColor: "#FFFFFF",
-                showAvatar: true,
-                avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
-                style: {
-                  backdropFilter: "blur(30px)",
-                  boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
-                }
-              },
-              userMessage: {
-                backgroundColor: "rgba(0, 0, 0, 0.5)",
-                textColor: "#FFFFFF",
-                showAvatar: true,
-                avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png",
-                style: {
-                  backdropFilter: "blur(30px)",
-                  boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
-                }
-              },
-              textInput: {
-                placeholder: "Type your question",
-                backgroundColor: "rgba(255, 255, 255, 0.3)",
-                textColor: "#FFFFFF",
-                sendButtonColor: "#3B81F6",
-                style: {
-                  backdropFilter: "blur(30px)"
-                }
+                boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
+              }
+            },
+            textInput: {
+              placeholder: "Type your question",
+              backgroundColor: "rgba(255, 255, 255, 0.3)",
+              textColor: "#FFFFFF",
+              sendButtonColor: "#3B81F6",
+              style: {
+                backdropFilter: "blur(30px)"
               }
             }
           }
-        });
+        }
       });
-    }
+    });
+  }
 
-    document.addEventListener('astro:after-swap', initializeChatbot);
-    document.addEventListener('astro:after-render', initializeChatbot);
-    initializeChatbot();
-  </script>
+  document.addEventListener('astro:after-swap', initializeChatbot);
+  document.addEventListener('astro:after-render', initializeChatbot);
+  initializeChatbot();
+</script>
