--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { type CollectionEntry, getCollection } from 'astro:content';
 import BlogPost from '../../layouts/BlogPost.astro';
+import Chatbot from '../../components/Chatbot.astro';
 
 export async function getStaticPaths() {
 	const posts = await getCollection('blog');
@@ -18,3 +19,4 @@ const { Content } = await post.render();
 <BlogPost {...post.data}>
 	<Content />
 </BlogPost>
+<Chatbot />
