--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Chatbot from '../components/Chatbot.astro';
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | Modern Marketing Agency</title>
-    <link rel="stylesheet" href="../styles/global.css" />
+    <!-- <link rel="stylesheet" href="../styles/global.css" /> -->
   </head>
   <body class="homepage">
 
