--- a/src/components/Chatbot.astro
+++ b/src/components/Chatbot.astro
@@ -1,72 +1,56 @@
 <script type="module">
-  function initializeChatbot() {
-    import("https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js").then(({ default: Chatbot }) => {
-      Chatbot.init({
-        chatflowid: "2aa95558-1764-401e-9993-10a380e6599b",
-        apiHost: "https://xavi99-11chatbot.hf.space/",
+    import Chatbot from "https://cdn.jsdelivr.net/npm/flowise-embed/dist/web.js"
+    Chatbot.init({
+        chatflowid: "58edfe09-0418-4c31-9757-80ec41ce7e30",
+        apiHost: "http://localhost:3000",
         chatflowConfig: {
-          // topK: 2
+            // topK: 2
         },
         theme: {
-          button: {
-            backgroundColor: "rgba(255, 255, 255, 0.3)",
-            right: 20,
-            bottom: 20,
-            size: "medium",
-            iconColor: "white",
-            customIconSrc: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg",
-            style: {
-              backdropFilter: "blur(30px)",
-              boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
+            button: {
+                backgroundColor: "rgba(10, 10, 10, 10.5)",
+                right: 20,
+                bottom: 20,
+                size: "medium",
+                iconColor: "white",
+                customIconSrc: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/google-messages.svg",
+            },
+            chatWindow: {
+                welcomeMessage: "Hello! How can i help you?",
+                backgroundColor: "rgba(0, 0, 0, 0.88)",
+                height: 700,
+                width: 400,
+                fontSize: 16,
+                poweredByTextColor: "rgba(0, 0, 0, 0.5)",
+                border: "1px solid #3B81F6",
+                borderRadius: "10px",
+                boxShadow: "0 4px 8px rgba(0, 0, 0, 0.2)",
+                backdropFilter: "blur(10px)",
+                botMessage: {
+                    backgroundColor: "#f7f8ff",
+                    textColor: "#303235",
+                    showAvatar: true,
+                    avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
+                },
+                userMessage: {
+                    backgroundColor: "#303235",
+                    textColor: "#ffffff",
+                    showAvatar: true,
+                    avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png",
+                    border: "1px solid #3B81F6",
+                    boxShadow: "0 4px 8px rgba(0, 0, 0, 0.2)",
+                    borderRadius: "10px",
+                },
+                textInput: {
+                    placeholder: "Type your question",
+                    backgroundColor: "#ffffff",
+                    textColor: "#303235",
+                    sendButtonColor: "#000000",
+                    border: "1px solid #3B81F6",
+                    borderRadius: "5px",
+                    boxShadow: "10 40px 80px #ffffff",
+                }
             }
-          },
-          chatWindow: {
-            welcomeMessage: "Hello! This is custom welcome message",
-            backgroundColor: "rgba(0, 0, 0, 0.7)",
-            style: {
-              backdropFilter: "blur(30px)",
-              border: "1px solid rgba(255, 255, 255, 0.18)"
-            },
-            height: 700,
-            width: 400,
-            fontSize: 16,
-            poweredByTextColor: "#FFFFFF",
-            botMessage: {
-              backgroundColor: "rgba(255, 255, 255, 0.2)",
-              textColor: "#FFFFFF",
-              showAvatar: true,
-              avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/parroticon.png",
-              style: {
-                backdropFilter: "blur(30px)",
-                boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
-              }
-            },
-            userMessage: {
-              backgroundColor: "rgba(0, 0, 0, 0.5)",
-              textColor: "#FFFFFF",
-              showAvatar: true,
-              avatarSrc: "https://raw.githubusercontent.com/zahidkhawaja/langchain-chat-nextjs/main/public/usericon.png",
-              style: {
-                backdropFilter: "blur(30px)",
-                boxShadow: "0 4px 6px rgba(255, 255, 255, 0.5)"
-              }
-            },
-            textInput: {
-              placeholder: "Type your question",
-              backgroundColor: "rgba(255, 255, 255, 0.3)",
-              textColor: "#FFFFFF",
-              sendButtonColor: "#3B81F6",
-              style: {
-                backdropFilter: "blur(30px)"
-              }
-            }
-          }
         }
-      });
-    });
-  }
-
-  document.addEventListener('astro:after-swap', initializeChatbot);
-  document.addEventListener('astro:after-render', initializeChatbot);
-  initializeChatbot();
+    })
 </script>
