--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -30,10 +30,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 80px;
+    margin-top: 10px;
   }
 
   .section-title {
-    font-size: 2.5rem;
+    font-size: 3.5rem;
     margin-bottom: 20px;
     background: linear-gradient(135deg, #e0e0e0, #606060, #e0e0e0);
     -webkit-background-clip: text;
@@ -51,22 +53,27 @@
 
   @media (max-width: 768px) {
     .section-title {
-      font-size: 1.8rem;
+      font-size: 3.5rem;
     }
 
     .connect-text {
       font-size: 1rem;
     }
+
   }
 
   .contact-container {
-    width: 80%;
-    max-width: 800px;
+    width: 90%;
+    max-width: 900px;
+    /* height: 450px; */
     background: rgba(255, 255, 255, 0.1);
     backdrop-filter: blur(10px);
     border-radius: 8px;
     padding: 20px;
+
     box-shadow: 0 15px 15px rgba(0, 0, 0, 0.3);
+    /* margin-left: 20px;
+    margin-right: 20px; */
   }
 
   .contact-form {
@@ -86,7 +93,7 @@
 
   .form-group input,
   .form-group textarea {
-    width: 100%;
+    width: 98%;
     padding: 10px;
     border: none;
     border-radius: 5px;
@@ -208,11 +215,43 @@
     box-shadow: 0 0 25px #ff1f71;
   }
 
-  @media (max-width: 768px) {
-    .cta-button {
-      width: 100%;
+  @media (min-width: 1024px) {
+    .contact-container{
+      width: 8%;
+    max-width: 900px;
     }
+    .form-group input,
+  .form-group textarea {
+    width: 9%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-size: 1rem;
+    resize: none;
   }
+
+  }
+
+  @media (min-width: 480px)  {
+    .contact-container{
+      width: 85%;
+    max-width: 900px;
+    }
+    .form-group input,
+  .form-group textarea {
+    width: 95%;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.2);
+    color: #fff;
+    font-size: 1rem;
+    resize: none;
+  }
+  }
+
 </style>
 
 <script src="/scripts/contact.js" defer></script>
