--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -1,110 +1,164 @@
 ---
-import type { CollectionEntry } from 'astro:content';
-import BaseHead from '../components/BaseHead.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-import FormattedDate from '../components/FormattedDate.astro';
+import type { CollectionEntry } from "astro:content";
+import BaseHead from "../components/BaseHead.astro";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+import FormattedDate from "../components/FormattedDate.astro";
 
-type Props = CollectionEntry<'blog'>['data'];
+type Props = CollectionEntry<"blog">["data"];
 
 const { title, description, pubDate, updatedDate, heroImage } = Astro.props;
 ---
 
 <html lang="en">
-    <head>
-        <BaseHead title={title} description={description} />
-		<link rel="stylesheet" href="/src/styles/global.css"> <!-- Import global styles -->
-        <style>
-            main {
-                width: calc(100% - 2em);
-                max-width: 100%;
-                margin: 0;
-                position: relative;
-            }
-            .hero-image-container {
-                width: 100%;
-                position: sticky;
-                top: 0;
-                z-index: -1;
-                padding: 1em 0;
-            }
-            .hero-image {
-                display: block;
-                width: 100%;
-                height: auto;
-                max-width: 1020px;
-                margin: 0 auto;
-                border-radius: 12px;
-                box-shadow: var(--box-shadow);
-            }
-            .prose-container {
-                position: relative;
-                z-index: 1;
-                width: 100%;
-                display: flex;
-                justify-content: center;
-                margin-top: -0vh; /* Adjust this value to reduce the gap */
-                padding: 2em 0; /* Add some padding for a small distance */
-            }
-            .prose {
-                width: 720px;
-                max-width: calc(100% - 2em);
-                margin: auto;
-                padding: 1em;
-                color: rgb(var(--gray-dark));
-                background: rgba(255, 255, 255, 0.5);
-                backdrop-filter: blur(10px);
-                border-radius: 12px;
-                box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            }
-            .title {
-                margin-bottom: 1em;
-                padding: 1em 0;
-                text-align: center;
-                line-height: 1;
-            }
-            .title h1 {
-                margin: 0 0 0.5em 0;
-            }
-            .date {
-                margin-bottom: 0.5em;
-                color: rgb(var(--gray));
-            }
-            .last-updated-on {
-                font-style: italic;
-            }
-        </style>
-    </head>
+  <head>
+    <BaseHead title={title} description={description} />
+    <link rel="stylesheet" href="/src/styles/global.css" />
+    <!-- Import global styles -->
+    <style>
+      main {
+        width: calc(100% - 2em);
+        max-width: 100%;
+        margin: 0;
+        position: relative;
+      }
+      .hero-image-container {
+        width: 100%;
+        position: sticky;
+        top: 0;
+        z-index: -1;
+        padding: 1em 0;
+      }
+      .hero-image {
+        display: block;
+        width: 100%;
+        height: auto;
+        max-width: 1020px;
+        margin: 0 auto;
+        border-radius: 12px;
+        box-shadow: var(--box-shadow);
+      }
+      .prose-container {
+        position: relative;
+        z-index: 1;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        margin-top: -0vh; /* Adjust this value to reduce the gap */
+        padding: 2em 0; /* Add some padding for a small distance */
+      }
+      .prose {
+        width: 720px;
+        max-width: calc(100% - 2em);
+        margin: auto;
+        padding: 1em;
+        color: rgb(var(--gray-dark));
+        background: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(10px);
+        border-radius: 12px;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+      }
+      .title {
+        margin-bottom: 1em;
+        padding: 1em 0;
+        text-align: center;
+        line-height: 1;
+      }
+      .title h1 {
+        margin: 0 0 0.5em 0;
+      }
+      .date {
+        margin-bottom: 0.5em;
+        color: rgb(var(--gray));
+      }
+      .last-updated-on {
+        font-style: italic;
+      }
 
-    <body>
-        <Header />
-        <main>
-            <article>
-                <div class="hero-image-container">
-                    {heroImage && <img class="hero-image" src={heroImage} alt="" />}
-                </div>
-                <div class="prose-container">
-                    <div class="prose">
-                        <div class="title">
-                            <div class="date">
-                                <FormattedDate date={pubDate} />
-                                {
-                                    updatedDate && (
-                                        <div class="last-updated-on">
-                                            Last updated on <FormattedDate date={updatedDate} />
-                                        </div>
-                                    )
-                                }
-                            </div>
-                            <h1>{title}</h1>
-                            <hr />
-                        </div>
-                        <slot />
+      /* Media query for mobile devices */
+      @media (max-width: 768px) {
+        .hero-image {
+          max-width: 100%;
+          margin: 0 auto;
+          margin-left: 20px;
+        }
+        .prose {
+          width: 100%;
+          max-width: 900px;
+          /* padding: 1em; */
+          margin-left: 40px;
+          margin-right: auto;
+        }
+        .title h1 {
+          font-size: 3em;
+        }
+      }
+
+      /* Media query for smaller laptops and tablets */
+      @media (min-width: 769px) and (max-width: 1024px) {
+        .hero-image {
+          max-width: 100%;
+          margin: 0 auto;
+          margin-left: 20px;
+        }
+        .prose {
+          width: 90%;
+          max-width: 800px;
+          padding: 1.5em;
+          margin-left: 40px;
+        }
+        .title h1 {
+          font-size: 2.2em;
+        }
+      }
+
+      /* Media query for large tablets and small desktops */
+      @media (min-width: 1025px) and (max-width: 1200px) {
+        .hero-image {
+          max-width: 100%;
+          margin: 0 auto;
+          margin-left: 20px;
+        }
+        .prose {
+          width: 80%;
+          max-width: 900px;
+          padding: 1.5em;
+          margin-left: 90px;
+        }
+        .title h1 {
+          font-size: 2.5em;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <Header />
+    <main>
+      <article>
+        <div class="hero-image-container">
+          {heroImage && <img class="hero-image" src={heroImage} alt="" />}
+        </div>
+        <div class="prose-container">
+          <div class="prose">
+            <div class="title">
+              <div class="date">
+                <FormattedDate date={pubDate} />
+                {
+                  updatedDate && (
+                    <div class="last-updated-on">
+                      Last updated on <FormattedDate date={updatedDate} />
                     </div>
-                </div>
-            </article>
-        </main>
-        <Footer />
-    </body>
+                  )
+                }
+              </div>
+              <h1>{title}</h1>
+              <hr />
+            </div>
+            <slot />
+          </div>
+        </div>
+      </article>
+    </main>
+    <Footer />
+  </body>
 </html>
-
