--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../../components/BaseHead.astro';
 import Header from '../../components/Header.astro';
 import Footer from '../../components/Footer.astro';
 import FormattedDate from '../../components/FormattedDate.astro';
+import Chatbot from '../../components/Chatbot.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 
@@ -277,6 +278,7 @@ const posts = (await getCollection('blog')).sort(
         </ul>
       </section>
     </main>
+    <Chatbot />
     <Footer />
   </body>
 </html>
